[gd_scene load_steps=2 format=2]

[ext_resource path="res://Sequencer/Step/Step.gd" type="Script" id=1]

[node name="Step" type="Control"]
anchor_right = 0.03
anchor_bottom = 0.049
margin_right = -30.72
margin_bottom = -29.4
size_flags_horizontal = 2
size_flags_vertical = 2
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 30.0
margin_bottom = 30.0
color = Color( 0.984314, 0.521569, 0, 1 )

[connection signal="gui_input" from="ColorRect" to="." method="_on_ColorRect_gui_input"]
[connection signal="mouse_entered" from="ColorRect" to="." method="_on_ColorRect_mouse_entered"]
[connection signal="mouse_exited" from="ColorRect" to="." method="_on_ColorRect_mouse_exited"]
